--- a/style.css
+++ b/style.css
@@ -132,10 +132,11 @@ nav ul li a:hover::after{
 .tab-contents ul li{
     list-style: none;
     margin: 10px 0;
+    Font-size: 14px;
 }
 .tab-contents ul li span{
     color: #b54769;
-    font-size: 14px ;
+    font-size: 10px ;
 
 }
 .tab-contents{
